--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,38 @@
 .logo-animation {
   animation: fadeIn 2s forwards, fadeOut 2s 5s forwards; /* Fade in for 2s, hold for 3s, fade out for 2s */
 }
+
+body {
+  margin: 0;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+/* src/index.css */
+
+.link-like {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.signature-container {
+  max-width: 100%;
+  overflow: hidden; /* or overflow: auto; */
+}
+
+.signature {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.link-like {
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+body,
+html {
+  font-family: 'Poppins', sans-serif !important;
+}
